--- a/system/css/apps/bronze.css
+++ b/system/css/apps/bronze.css
@@ -34,6 +34,8 @@ embed {
   cursor: pointer;
   height: 30px;
   margin: -5px 0px;
+  text-decoration: none;
+  color: black;
 }
 @media screen and (max-width:1024px) {
   #button {
