--- a/system/css/themes/classic.css
+++ b/system/css/themes/classic.css
@@ -11,7 +11,10 @@
     background: transparent;
 }
 
-a, h1, p, strong, span, ul, li, #appicons a, #appsHtxt, #icons, #time, #date {
+a, h1, p, span, ul, li, #appicons a, #appsHtxt, #icons, #time, #date {
+    color: white;
+}
+strong {
     color: white !important;
 }
 .winmaximize > span {
